major refac in whole codebase