@@ -33,7 +33,6 @@ import java.util.regex.Pattern;
 import javax.sql.DataSource;
 
 public class ScriptExecutionsPage extends AbstractWebPage {
-
   private ScriptExecutionData inputData;
 
   private ACS acs;
@@ -44,7 +43,6 @@ public class ScriptExecutionsPage extends AbstractWebPage {
       DataSource xapsDataSource,
       DataSource syslogDataSource)
       throws Exception {
-
     /* Parse input data to the servlet */
     inputData =
         (ScriptExecutionData) InputDataRetriever.parseInto(new ScriptExecutionData(), params);
@@ -75,8 +73,10 @@ public class ScriptExecutionsPage extends AbstractWebPage {
     //		System.out.println("Template set");
   }
 
-  /* Should output an scriptexecution, if an scriptexecution is chosen. If not a default "blank" scriptexecution must be the output
-   * Will always output a list of all possible scriptexecutions within this unittype.
+  /**
+   * Should output an scriptexecution, if an scriptexecution is chosen. If not a default "blank"
+   * scriptexecution must be the output Will always output a list of all possible scriptexecutions
+   * within this unittype.
    */
   private void output(Output outputHandler, Unittype unittype, Script script) throws Exception {
     Map<String, Object> fmMap = outputHandler.getTemplateMap();
@@ -85,9 +85,9 @@ public class ScriptExecutionsPage extends AbstractWebPage {
 
     /* Output for the configuration */
     File selectedFile = null;
-    if (script != null) // Execute on ScriptExecutionPage has been clicked
-    selectedFile = script.getScript();
-    else if (inputData.getId().getInteger()
+    if (script != null) {
+      selectedFile = script.getScript();
+    } else if (inputData.getId().getInteger()
         != null) { // Clicked on a script execution (in history-list)
       ScriptExecution se = scriptExecutions.getById(unittype, inputData.getId().getInteger());
       selectedFile = se.getScriptFile();
@@ -96,7 +96,7 @@ public class ScriptExecutionsPage extends AbstractWebPage {
           "arguments",
           se.getArguments() != null ? se.getArguments().replaceAll("\"", "&quot;") : " ");
       if (se.getArguments() != null
-          && se.getArguments().length() > 0) { // copy from arguments-array into ScriptArgs-values
+          && !se.getArguments().isEmpty()) { // copy from arguments-array into ScriptArgs-values
         String[] args = StringUtil.split(se.getArguments());
         //				System.out.println(args);
         if (script != null && script.getScriptArgs() != null) {
@@ -129,13 +129,18 @@ public class ScriptExecutionsPage extends AbstractWebPage {
       script = parse(selectedFile, unittype);
     }
 
-    if (script != null && script.getScriptArgs() != null && script.getScriptArgs().size() > 0)
+    if (script != null && script.getScriptArgs() != null && !script.getScriptArgs().isEmpty()) {
       fmMap.put("scriptargs", script.getScriptArgs());
-    if (script != null && script.getTitle() != null) fmMap.put("title", script.getTitle());
-    if (script != null && script.getDescription() != null)
+    }
+    if (script != null && script.getTitle() != null) {
+      fmMap.put("title", script.getTitle());
+    }
+    if (script != null && script.getDescription() != null) {
       fmMap.put("description", script.getDescription());
-    if (fmMap.get("info") == null && inputData.getInfo().getString() != null)
+    }
+    if (fmMap.get("info") == null && inputData.getInfo().getString() != null) {
       fmMap.put("info", inputData.getInfo().getString());
+    }
     List<File> allScriptFiles = Arrays.asList(unittype.getFiles().getFiles(FileType.SHELL_SCRIPT));
     fmMap.put(
         "scripts",
@@ -151,13 +156,15 @@ public class ScriptExecutionsPage extends AbstractWebPage {
   }
 
   private Script parse(File scriptFile, Unittype unittype) throws Exception {
-    if (scriptFile == null) return null;
+    if (scriptFile == null) {
+      return null;
+    }
 
     Script script = new Script();
     script.setScript(scriptFile);
     String content = new String(scriptFile.getContent());
     String[] lines = content.split("\\n");
-    List<ScriptArg> scriptArgList = new ArrayList<ScriptArg>();
+    List<ScriptArg> scriptArgList = new ArrayList<>();
     int index = 0;
     String title = null;
     String description = null;
@@ -169,8 +176,12 @@ public class ScriptExecutionsPage extends AbstractWebPage {
         String type = "String";
         String comment = "";
         String value = "";
-        if (fieldArray.length > 1) name = fieldArray[1].trim();
-        if (fieldArray.length > 2) type = fieldArray[2].trim();
+        if (fieldArray.length > 1) {
+          name = fieldArray[1].trim();
+        }
+        if (fieldArray.length > 2) {
+          type = fieldArray[2].trim();
+        }
         if (fieldArray.length > 3) {
           value = fieldArray[3].trim();
           //					System.out.println("Parsed a value \"" + value + "\"");
@@ -182,10 +193,14 @@ public class ScriptExecutionsPage extends AbstractWebPage {
         scriptArgList.add(sif);
       } else if (line.startsWith("#:Title")) {
         String[] array = line.substring(2).split(":");
-        if (array.length > 1) title = array[1];
+        if (array.length > 1) {
+          title = array[1];
+        }
       } else if (line.startsWith("#:Description")) {
         String[] array = line.substring(2).split(":");
-        if (array.length > 1) if (description == null) description = "";
+        if (array.length > 1 && description == null) {
+          description = "";
+        }
         description += array[1];
       }
     }
@@ -198,7 +213,6 @@ public class ScriptExecutionsPage extends AbstractWebPage {
   private static Pattern rangePattern = Pattern.compile("(\\d+)\\s*-\\s*(\\d+)?");
 
   private boolean validate(ScriptArg scriptArg, Unittype unittype) {
-
     if (scriptArg.getType() == ScriptArg.ArgType.INTEGER && scriptArg.getValidationRule() == null) {
       try {
         Integer.parseInt(scriptArg.getValue());
@@ -212,7 +226,9 @@ public class ScriptExecutionsPage extends AbstractWebPage {
       if (matcher.matches()) {
         int from = Integer.parseInt(matcher.group(1));
         int to = Integer.MAX_VALUE;
-        if (matcher.groupCount() == 2) to = Integer.parseInt(matcher.group(2));
+        if (matcher.groupCount() == 2) {
+          to = Integer.parseInt(matcher.group(2));
+        }
         try {
           int number = Integer.parseInt(scriptArg.getValue());
           if (number < from || number > to) {
@@ -234,20 +250,16 @@ public class ScriptExecutionsPage extends AbstractWebPage {
         scriptArg.setError("No file is chosen");
         return false;
       }
-    } else if (scriptArg.getType() == ScriptArg.ArgType.ENUM) {
-      if (scriptArg.getValue() == null) {
-        scriptArg.setError("No option is chosen");
-        return false;
-      }
+    } else if (scriptArg.getType() == ScriptArg.ArgType.ENUM && scriptArg.getValue() == null) {
+      scriptArg.setError("No option is chosen");
+      return false;
     }
     return true;
   }
 
-  /*
-   * Will execute a script
-   */
+  /** Will execute a script. */
   private Script action(ParameterParser params, Output outputHandler, Unittype unittype)
-      throws IllegalArgumentException, IllegalAccessException, InvocationTargetException {
+      throws IllegalAccessException, InvocationTargetException {
     Map<String, Object> fmMap = outputHandler.getTemplateMap();
     ScriptExecutions scriptExecutions = acs.getScriptExecutions();
     if (inputData.getFormSubmit().isValue("Execute")) {
@@ -258,20 +270,22 @@ public class ScriptExecutionsPage extends AbstractWebPage {
           int index = 1;
           String scriptArgs = "";
           boolean typeCheckOk = true;
-          while (true) {
+          do {
             String argValue = params.getParameter("argument" + index);
-            if (argValue == null) break;
+            if (argValue == null) {
+              break;
+            }
             if (script != null
                 && script.getScriptArgs() != null
                 && script.getScriptArgs().size() >= index) {
               ScriptArg scriptArg = script.getScriptArgs().get(index - 1);
               try {
                 if (scriptArg.getType() == ScriptArg.ArgType.PROFILE) {
-                  Profile p = unittype.getProfiles().getById(new Integer(argValue));
+                  Profile p = unittype.getProfiles().getById(Integer.valueOf(argValue));
                   scriptArg.getProfileDropDown().setSelected(p);
                   argValue = p.getName();
                 } else if (scriptArg.getType() == ScriptArg.ArgType.FILE) {
-                  File f = unittype.getFiles().getById(new Integer(argValue));
+                  File f = unittype.getFiles().getById(Integer.valueOf(argValue));
                   scriptArg.getFileDropDown().setSelected(f);
                   argValue = f.getName();
                 } else if (scriptArg.getType() == ScriptArg.ArgType.ENUM) {
@@ -287,13 +301,19 @@ public class ScriptExecutionsPage extends AbstractWebPage {
                 argValue = null;
               }
               scriptArg.setValue(argValue);
-              if (!validate(scriptArg, unittype)) typeCheckOk = false;
+              if (!validate(scriptArg, unittype)) {
+                typeCheckOk = false;
+              }
             }
-            if (argValue != null && argValue.contains(" ")) argValue = "\"" + argValue + "\"";
+            if (argValue != null && argValue.contains(" ")) {
+              argValue = "\"" + argValue + "\"";
+            }
             scriptArgs += argValue + " ";
             index++;
+          } while (true);
+          if (scriptArgs.isEmpty()) {
+            scriptArgs = inputData.getArguments().getString();
           }
-          if (scriptArgs.length() == 0) scriptArgs = inputData.getArguments().getString();
           String requestId = inputData.getRequestid().getString();
           if (typeCheckOk) {
             scriptExecutions.requestExecution(scriptFile, scriptArgs, requestId);
@@ -319,8 +339,7 @@ public class ScriptExecutionsPage extends AbstractWebPage {
   }
 
   public List<MenuItem> getShortcutItems(SessionData sessionData) {
-    List<MenuItem> list = new ArrayList<MenuItem>();
-    list.addAll(super.getShortcutItems(sessionData));
+    List<MenuItem> list = new ArrayList<>(super.getShortcutItems(sessionData));
     list.add(new MenuItem("Unit type overview", Page.UNITTYPEOVERVIEW));
     list.add(new MenuItem("Files overview", Page.FILES));
     return list;
